Adding maven opts to maven-release.sh