@@ -12,6 +12,11 @@ if [ -z $JAVA_HOME ]; then
     exit
 fi
 
+if [ -z $MAVEN_OPTS ]; then
+    echo "Setting some MAVEN_OPTS > export MAVEN_OPTS='-Xmx512m -XX:MaxPermSize=128m'";
+    export MAVEN_OPTS="-Xmx512m -XX:MaxPermSize=128m"
+fi
+
 echo "Started..."
 
 mvn clean deploy -Prelease -DskipTests
